# AutoTrader

./: .gitignore  NOTES_observations.md  README.md  pyproject.toml  requirements.txt
config/: broker_config.yaml  llm_config.yaml  memory_policy.yaml  notifications.yaml  prompts.yaml  rl_q_table.json  strategy_params.json  strategy_version.yaml  trading_policy.yaml  universe.yaml  upstox_instruments.json
docs/: AGENT_WORKFLOW.md
reports/graphs/: compete.mmd  intraday.mmd  post_market.mmd  pre_market.mmd
scripts/: circuit_breaker.py  clear_halt.py  fetch_intraday.py  render_graphs.py  run_backtest.py  run_intraday.py  run_post_market.py  run_pre_market.py  test_llm_providers.py  update_instruments.py
src/autotrader/: __init__.py
src/autotrader/agents/: __init__.py
src/autotrader/core/: __init__.py  config.py  llm.py  logging_setup.py  messages.py  pick_attribution.py  prompts.py  session_store.py  sizing.py  slippage.py  snapshot.py  state.py  tracing.py  trade_journal.py
src/autotrader/graphs/: compete.py  intraday.py  post_market.py  pre_market.py
src/autotrader/memory/: __init__.py  embeddings.py  long_term.py  postgres_store.py  scoring.py  short_term.py
src/autotrader/reports/: generators.py
src/autotrader/safety/: __init__.py  controls.py
src/autotrader/tools/: __init__.py  broker_tools.py  (+6 more)
systemd/: autotrader-intraday.service  autotrader-intraday.timer  autotrader-post-market.service  autotrader-post-market.timer  autotrader-pre-market.service  autotrader-pre-market.timer  install.sh
tests/: test_agents.py  test_compete.py  test_universe.py
(+32 files in other folders)
